<resources>
    <string name="app_name">Concert Tour Booking</string>
    <string name="welcome">Welcome</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="register_here">Register here</string>
    <string name="logout">Logout</string>
    <string name="app_logo">\@drawable/music_logo\n</string>

        <string name="concert_image">Concert Image</string>
        <string name="concert_title">Concert Title</string>
        <string name="artist_name">Artist Name</string>
        <string name="venue">Venue</string>
        <string name="date_time">Date and Time</string>
        <string name="price">Price</string>
        <string name="tickets_available">Tickets Available</string>
        <string name="edit">Edit</string>
        <string name="delete">Delete</string>
        <string name="book">Book</string>
    </resources>
